// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TabsManager When on a large device renders correctly when given multiple children 1`] = `
<div>
  <div
    class="max-small:block flex w-full"
  >
    <div
      class="max-small:flex max-small:w-full max-small:flex-row max-small:gap-0 max-small:overflow-y-hidden max-small:overflow-x-scroll max-small:py-0 max-small:pb-2 relative z-10 m-0 flex h-fit w-max list-none flex-col gap-6 py-2.5"
    >
      <button
        aria-label="Panel 1"
        class="max-small:mb-0 max-small:shrink-0 max-small:grow-0 max-small:justify-center relative z-20 flex w-fit cursor-pointer bg-transparent px-5 py-2 whitespace-nowrap focus-visible:border-none  "
      >
        Panel 1
      </button>
      <button
        aria-label="Panel 2"
        class="max-small:mb-0 max-small:shrink-0 max-small:grow-0 max-small:justify-center relative z-20 flex w-fit cursor-pointer bg-transparent px-5 py-2 whitespace-nowrap focus-visible:border-none  "
      >
        Panel 2
      </button>
      <div
        class="transition-[transform width] ease-[cubic-bezier(0.645, 0.045, 0.355, 1)] bg-brown dark:bg-darkgrey max-small:bottom-2.5 max-small:top-auto visible absolute top-0 left-0 z-10 h-[40px] w-[122px] rounded delay-100 duration-200"
        style="transform: translateY(10px);"
      />
      <div
        class="dark:bg-softwhite max-small:hidden visible absolute top-0 left-0 ml-1 h-full w-0.5 rounded-sm bg-black"
      />
    </div>
    <div
      class="max-small:ml-0 relative ml-5 w-full"
      style="height: 0px;"
    >
      <div
        class="absolute top-0 left-0 m-0 w-full p-0 transition-opacity duration-700 ease-in-out visible relative pt-2.5 opacity-100"
      >
        <div
          title="Panel 1"
        >
          First Panel
        </div>
      </div>
      <div
        class="absolute top-0 left-0 m-0 w-full p-0 transition-opacity duration-700 ease-in-out invisible opacity-0"
      >
        <div
          title="Panel 2"
        >
          Second Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsManager When on a small device renders correctly when given multiple children 1`] = `
<div>
  <div
    class="max-small:block flex w-full"
  >
    <div
      class="max-small:flex max-small:w-full max-small:flex-row max-small:gap-0 max-small:overflow-y-hidden max-small:overflow-x-scroll max-small:py-0 max-small:pb-2 relative z-10 m-0 flex h-fit w-max list-none flex-col gap-6 py-2.5"
    >
      <button
        aria-label="Panel 1"
        class="max-small:mb-0 max-small:shrink-0 max-small:grow-0 max-small:justify-center relative z-20 flex w-fit cursor-pointer bg-transparent px-5 py-2 whitespace-nowrap focus-visible:border-none  "
      >
        Panel 1
      </button>
      <button
        aria-label="Panel 2"
        class="max-small:mb-0 max-small:shrink-0 max-small:grow-0 max-small:justify-center relative z-20 flex w-fit cursor-pointer bg-transparent px-5 py-2 whitespace-nowrap focus-visible:border-none  "
      >
        Panel 2
      </button>
      <div
        class="transition-[transform width] ease-[cubic-bezier(0.645, 0.045, 0.355, 1)] bg-brown dark:bg-darkgrey max-small:bottom-2.5 max-small:top-auto visible absolute top-0 left-0 z-10 h-[40px] w-[122px] rounded delay-100 duration-200"
        style="height: 2px;"
      />
      <div
        class="dark:bg-softwhite max-small:hidden visible absolute top-0 left-0 ml-1 h-full w-0.5 rounded-sm bg-black"
      />
    </div>
    <div
      class="max-small:ml-0 relative ml-5 w-full"
      style="height: 0px;"
    >
      <div
        class="absolute top-0 left-0 m-0 w-full p-0 transition-opacity duration-700 ease-in-out visible relative pt-2.5 opacity-100"
      >
        <div
          title="Panel 1"
        >
          First Panel
        </div>
      </div>
      <div
        class="absolute top-0 left-0 m-0 w-full p-0 transition-opacity duration-700 ease-in-out invisible opacity-0"
      >
        <div
          title="Panel 2"
        >
          Second Panel
        </div>
      </div>
    </div>
  </div>
</div>
`;
